# solana-spl-token-in-rust

./: LEARN.md
spl-anchor-program/: Anchor.toml  package.json
spl-anchor-program/.anchor/: test-ledger-log.txt
spl-anchor-program/.anchor/test-ledger/: faucet-keypair.json
spl-anchor-program/client/: app.js  package-lock.json
spl-anchor-program/client/my-solana-wallet/: from-nfVpyPoHkjhVRe1WeA5D5uXa39LjFc4hehxVUbtXsrt.json  mint-4SAGrJdyq4oFiQhbu3NE2ALSv4umzAN1gPHpi7maFrwe.json  to-5sxb4ceXXpj2VSqFGZzUgaym4SMEYgqJAc2fPZmhJzja.json  transfer-Dw2jgWmpEHBkymfqcba9SiyTbBT5dRY1CXS6FoebFZtt.json  wallet-GeKRGQZwgxVQ5ojsGKukSMptEhyg9r4YrKjgWPrEqScm.json
spl-anchor-program/frontend-mymoney/: package-lock.json  package.json
spl-anchor-program/frontend-mymoney/src/: App copy.js  App.js
spl-anchor-program/frontend-mymoney/src/idl/: mymoneydapp.json
spl-anchor-program/programs/mymoneydapp/: Cargo.toml
spl-anchor-program/programs/mymoneydapp/src/: lib.rs
spl-anchor-program/tests/: mymoneydapp.js
